Fixing product card overlap issue with top banner on category pages

--- a/assets/scss/layouts/body/_body.scss
+++ b/assets/scss/layouts/body/_body.scss
@@ -14,6 +14,7 @@
 
 .page-content,
 .page-content--full {
+    padding-top: .75rem;
     @include grid-column(12);
 }
 
